trunk/OldArchive/31420279333f068fda486293db144d32-3b440a87a52fe2ae7c853c82f4c5144f/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:36: error: invalid initialization of non-const reference of type ‘std::string& {aka std::basic_string<char>&}’ from an rvalue of type ‘std::string {aka std::basic_string<char>}’
     std::string &str = string("abc");
                                    ^
